--- a/CemrgApp/Plugins/kcl.cemrgapp.scar/CMakeLists.txt
+++ b/CemrgApp/Plugins/kcl.cemrgapp.scar/CMakeLists.txt
@@ -4,4 +4,5 @@ mitk_create_plugin(
   EXPORT_DIRECTIVE SCAR_EXPORT
   EXPORTED_INCLUDE_SUFFIXES src
   MODULE_DEPENDS MitkQtWidgetsExt MitkCemrgAppModule
+  PACKAGE_DEPENDS PRIVATE VTK|CommonSystem
 )
