--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,10 +64,9 @@ jobs:
       run: ctest -R Cemrg -V
 
     - name: Code Coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        functionalities: coveragepy
         root_dir: /CemrgApp/
-        gcov_root_dir: /Build/MITK-build
         directory: ${{ github.workspace }}
+        plugin: gcov
