--- a/CemrgApp/Modules/CemrgAppModule/cmdapps/CMakeLists.txt
+++ b/CemrgApp/Modules/CemrgAppModule/cmdapps/CMakeLists.txt
@@ -9,6 +9,8 @@ option(BUILD_CEMRG_VENTRICLE_SEGMENTATION_RELABEL "Build ventricle segmentation 
 option(BUILD_CEMRG_MORPH_ANALYSIS "Build atrial morph analysis" ON)
 option(BUILD_CEMRG_IMAGE_CONVERT "Build image convert format" ON)
 option(BUILD_CEMRG_SURFACE_AREA "Build surface area calculator" ON)
+option(BUILD_CEMRG_JSON_READER "Build JSON file reader" ON)
+option(BUILD_CEMRG_SEGSMOOTH "Build segmentation smoothing command line app. " ON)
 
 if(BUILD_CemrgCMDApps)
   mitkFunctionCreateCommandLineApp(
@@ -97,3 +99,19 @@ IF(BUILD_CEMRG_SURFACE_AREA)
         CPP_FILES CemrgAreaFromThreshold.cpp
     )
 ENDIF()
+
+if(BUILD_CEMRG_JSON_READER)
+  mitkFunctionCreateCommandLineApp(
+    NAME CemrgJsonFileReader
+    DEPENDS MitkSegmentation MitkCemrgAppModule
+    CPP_FILES CemrgJsonFileReader.cpp
+  )
+endif()
+
+if(BUILD_CEMRG_SEGSMOOTH)
+  mitkFunctionCreateCommandLineApp(
+    NAME CemrgSegmentationSmooth
+    DEPENDS MitkSegmentation MitkCemrgAppModule
+    CPP_FILES CemrgSegmentationSmooth.cpp
+  )
+endif()
