--- a/CemrgApp/Plugins/kcl.cemrgapp.fourchamber/plugin.xml
+++ b/CemrgApp/Plugins/kcl.cemrgapp.fourchamber/plugin.xml
@@ -8,10 +8,17 @@
           icon="resources/icon.xpm" />
   </extension>
 
-    <extension point="org.blueberry.ui.views">
+  <extension point="org.blueberry.ui.views">
     <view id="org.mitk.views.fourchamberlandmarksview"
           name="Cemrg Four Chamber Heart Landmarks View"
           class="FourChamberLandmarksView"
+          icon="resources/icon.xpm" />
+  </extension>
+
+  <extension point="org.blueberry.ui.views">
+    <view id="org.mitk.views.fourchamberguidepointsview"
+          name="Cemrg Four Chamber Heart Guide Points View"
+          class="FourChamberGuidePointsView"
           icon="resources/icon.xpm" />
   </extension>
 
